--- a/bootstrap-portfolio/hw4/index.html
+++ b/bootstrap-portfolio/hw4/index.html
@@ -105,6 +105,7 @@
 	<td id='r99' > </td >
     </tr >
   </table >
+  <p>HeheheHa</p>
   <button onclick="solve()">Solve</button>
   <button onclick="loadNewPuzzle()">Load New Puzzle</button>
   <script src ="sudoku.js" > </script >
